--- a/overrides/main.html
+++ b/overrides/main.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="{{ title }}" />
     <meta property="og:description" content="{{ config.site_description }}" />
-    <meta property="og:image" content="https://rdf-stax.github.io/1.0.0/assets/social.jpg" />
+    <meta property="og:image" content="https://rdf-stax.github.io/dev/assets/social.jpg" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
