Fix the /ontology redirect

--- a/ontology/index.html
+++ b/ontology/index.html
@@ -4,13 +4,13 @@
   <meta charset="utf-8">
   <title>Redirecting</title>
   <noscript>
-    <meta http-equiv="refresh" content="1; url=dev/" />
+    <meta http-equiv="refresh" content="1; url=/dev/ontology/" />
   </noscript>
   <script>
-    window.location.replace("dev/ontology/" + window.location.hash);
+    window.location.replace("/dev/ontology/" + window.location.hash);
   </script>
 </head>
 <body>
-  Redirecting to <a href="dev/ontology/">dev/ontology/</a>...
+  Redirecting to <a href="/dev/ontology/">/dev/ontology/</a>...
 </body>
 </html>
