--- a/overrides/main.html
+++ b/overrides/main.html
@@ -14,4 +14,5 @@
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta name="google-site-verification" content="GkeCfDKZE5MRj_U5_gZTOlW1-eNm64mFtqWLvLjwkLw" />
 {% endblock %}
