Update the outdated block template

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -19,7 +19,7 @@
 
 {% block outdated %}
   You're not viewing the latest version.
-  <a href="{{ '../' ~ base_url }}">
+  <a href="{{ '/dev' }}">
     <strong>Click here to go to latest.</strong>
   </a>
 {% endblock %}
