--- a/overrides/main.html
+++ b/overrides/main.html
@@ -15,6 +15,7 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta name="google-site-verification" content="GkeCfDKZE5MRj_U5_gZTOlW1-eNm64mFtqWLvLjwkLw" />
+    <meta name="google-site-verification" content="JMy5zT6f11aw--RbVdmvGDEfHi_khf67nj7XDkz0KvA" />
 {% endblock %}
 
 {% block outdated %}
